# Kamikaze-Robots

./: CMakeLists.txt  README.md  build_with_coverage.sh
.github/workflows/: build_and_coveralls.yml
app/: CMakeLists.txt  main.cpp
app/box_bot_description/robot/: box_bot.xacro  macros.xacro  wheels.xacro
app/box_bot_gazebo/: package.xml
box_bot_description/: CMakeLists.txt  package.xml
box_bot_description/launch/: multi_spawn_robot_launch.py  spawn_box_bot_launch.py  spawn_box_bot_v2.py  spawn_robot_launch.py
box_bot_description/robot/: box_bot.gazebo  box_bot.urdf  box_bot_body.xacro  box_bot_propeller.xacro  box_bot_v2.urdf  caster_wheels.xacro  materials.xacro  properties.xacro
box_bot_gazebo/: CMakeLists.txt
box_bot_gazebo/launch/: box_bot_launch.py  multi_box_bot_launch.py  start_world_launch.py
cmake/: CodeCoverage.cmake
include/: navigator.hpp  planner.hpp
kamikaze/: CMakeLists.txt  package.xml  uncrustify_google_cpp_allman.cfg
kamikaze/app/: swarm_init.cpp
kamikaze/cmake/: CodeCoverage.cmake
kamikaze/include/kamikaze/: spawn_controller.h  spawn_controller.hpp
kamikaze/scripts/: generate_coverage_report.bash
kamikaze/src/: spawn_controller.cpp
kamikaze/test/: test.cpp
results/: cppcheck.txt  cpplint.txt
src/: CMakeLists.txt  navigator.cpp  planner.cpp
test/: CMakeLists.txt  main.cpp  test.cpp
