<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kamikaze</name>
  <version>0.0.0</version>
  <description>A package that controls teh box bot</description>
  <maintainer email="aneeshch@umd.edu">Aneesh Chodisetty</maintainer>
  <maintainer email="bhargav.soothram@gmail.com">Bhargav Kumar Soothram</maintainer>
  <maintainer email="jkatak@umd.edu">Joseph Pranadheer Reddy Katakam</maintainer>
  <license>MIT license</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
